# semantic-tag-utility

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
diagrams/: conncetion.d2  metadata.d2
model/: .env  Tutorial.sysml
semantic_tag_utility/: semantic-tag-utility.py
semantic_tag_utility/ci/org/stu/ast/: ASTGenerator.java
semantic_tag_utility/tools/: api_client.py  ast_to_jsonld.py  ontology_to_tag.py  sparql_queries.py
